--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.3",
-        "fakerphp/faker": "^1.9.1"
+        "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+                "fakerphp/faker": "^1.9.1"
     },
     "autoload": {
         "psr-4": {
