--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.2.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.3",
@@ -26,6 +26,7 @@
         "phpunit/phpunit": "^9.3.3",
         "fakerphp/faker": "^1.9.1"
     },
+    "replace": { "phpspec/prophecy": "*" },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
